[change]moved files

--- a/nazotoki.html
+++ b/nazotoki.html
@@ -31,7 +31,8 @@
             <p>答えを入力しよう</p>
             <div class="input-container">
                 <input type="text" placeholder="ここに入力">
-                <button>送信</button>
+                <button onclick="checkKeyword()">送信</button>
+                <div id="result"></div>
             </div>
         </section>
 
@@ -50,6 +51,9 @@
             <p>naftec.shiozbu@gmail.com</p>
         </footer>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="nazotoki.js"></script>
 </body>
 
 </html>
